# nazar

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/nazar-ai/: Cargo.toml
crates/nazar-ai/src/: lib.rs
crates/nazar-api/: Cargo.toml
crates/nazar-api/src/: lib.rs  proc_reader.rs  service_checker.rs
crates/nazar-core/: Cargo.toml
crates/nazar-core/src/: lib.rs
crates/nazar-mcp/: Cargo.toml
crates/nazar-mcp/src/: lib.rs  transport.rs
crates/nazar-store/: Cargo.toml
crates/nazar-store/src/: lib.rs
crates/nazar-tui/: Cargo.toml
crates/nazar-tui/src/: app.rs  lib.rs
crates/nazar-tui/src/widgets/: agents.rs  alerts.rs  cpu.rs  disk.rs  gpu.rs  header.rs  help.rs  insights.rs  memory.rs  mod.rs  network.rs  predictions.rs  processes.rs  services.rs  temperatures.rs
crates/nazar-ui/: Cargo.toml
crates/nazar-ui/src/: lib.rs
docs/: README.md  architecture.md  development.md  mcp-tools.md  roadmap.md
docs/adr/: 001-proc-readers-over-sysinfo.md  002-shared-state-rwlock.md  003-axum-http-api.md
src/: collector.rs  http.rs  main.rs
