[workspace]
resolver = "2"
members = [
    "crates/nazar-core",
    "crates/nazar-api",
    "crates/nazar-ui",
    "crates/nazar-ai",
    "crates/nazar-mcp",
    "crates/nazar-store",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
libc = "0.2"
rusqlite = { version = "0.34", features = ["bundled"] }
egui_plot = "0.34"

[package]
name = "nazar"
version = "2026.3.17"
edition = "2024"
description = "AI-native system monitor for AGNOS"
license = "GPL-3.0"

[dependencies]
nazar-core = { path = "crates/nazar-core" }
nazar-api = { path = "crates/nazar-api" }
nazar-ui = { path = "crates/nazar-ui" }
nazar-ai = { path = "crates/nazar-ai" }
nazar-mcp = { path = "crates/nazar-mcp" }
nazar-store = { path = "crates/nazar-store" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[[bin]]
name = "nazar"
path = "src/main.rs"
