[package]
name = "nazar-mcp"
version = "2026.3.17"
edition = "2024"
description = "MCP server for Nazar — exposes monitoring tools to AGNOS agents"
license = "GPL-3.0"

[dependencies]
nazar-core = { path = "../nazar-core" }
nazar-api = { path = "../nazar-api" }
nazar-ai = { path = "../nazar-ai" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
