[package]
name = "nazar-mcp"
version = "2026.3.18"
edition = "2024"
description = "MCP server for Nazar — exposes monitoring tools to AGNOS agents"
license = "GPL-3.0"

[dependencies]
nazar-core = { path = "../nazar-core" }
bote = { path = "../../../bote" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1", features = ["io-std", "io-util"] }

[dev-dependencies]
chrono = { workspace = true }
