[package]
name = "nazar-ui"
version = "2026.3.17"
edition = "2024"
description = "GUI for Nazar system monitor (egui/eframe)"
license = "GPL-3.0"

[dependencies]
nazar-core = { path = "../nazar-core" }
egui = { workspace = true }
eframe = { workspace = true }
chrono = { workspace = true }
egui_plot = { workspace = true }
